# mewsfeed-kangaroo

./: .env.example  .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release-codesigned.yaml  release.yaml
pouch/ui/: index.html
pouch/ui/assets/: index-335dfff0.js  index-71f64e9a.css  index-9d82f0a9.js  index-b174bbf4.js  index-d733ea3c.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  menu.rs
